Update environment configuration, README, and requirements. Changed app name to SingularityChecker, updated admin password, added form profile checklist, and included new dependencies for bcrypt and itsdangerous. Enhanced deployment documentation with notes on quoting values and password length for bcrypt compatibility.

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-APP_NAME=Redeem Checker
-SECRET_KEY=replace-with-a-random-long-secret
+APP_NAME=SingularityChecker
+SECRET_KEY=E0RYPDg5wMSHeYJZZm9OjVMOVyfg6uhggvF0n-odOhXGW4N5fCIxxSWvOd28n3B_
 
 # Initial admin account (created on first startup only)
 ADMIN_USERNAME=admin
-ADMIN_PASSWORD=change-me-now
+ADMIN_PASSWORD=Greatmindsthinkalike12!
 
 # Paths (defaults shown)
 DATABASE_PATH=./data/app.db
