--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ httpx>=0.28.0,<1.0.0
 python-multipart>=0.0.9,<1.0.0
 PyYAML>=6.0.0,<7.0.0
 passlib[bcrypt]>=1.7.4,<2.0.0
+bcrypt>=3.2.0,<4.0.0
 jinja2>=3.1.0,<4.0.0
 playwright>=1.49.0,<2.0.0
 python-dotenv>=1.0.1,<2.0.0
+itsdangerous>=2.2.0,<3.0.0
